tests/error/tracing_errors/bad_int2.py
from guppylang.decorator import guppy


@guppy.comptime
def test(x: int) -> int:
    # constant is largest negative value that fails
    return x + (-(1 << 63) - 1)

guppy.compile(test)
